fix issue with header z-index

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,5 @@
 .nav{
+    z-index: 100;
     display: flex;
     flex-direction: row;
     background-color: #282c34;
